<resources>
    <string name="app_name">TheApp02</string>
    <string name="destination">Destination</string>
    <string name="age">Age</string>
    <string name="dob">DOB</string>
    <string name="expair_date">Expair Date</string>
    <string name="full_name">Full Name</string>
    <string name="todo">TODO</string>
    <string name="setting">Setting</string>
    <string name="account">Account</string>
    <string name="payment">Payment</string>
    <string name="location">Location</string>
    <string name="my_profile">My Profile</string>
    <string name="name">Name</string>
    <string name="Todo">TODO</string>
</resources>