<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Profile"
    android:background="@drawable/profile">

    <ImageButton
        android:id="@+id/imageButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.069"
        app:srcCompat="@drawable/ic_launcher_foreground"
        android:contentDescription="@string/Todo" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/name"
        android:textColor="#000000"
        android:textSize="22sp"
        tools:layout_editor_absoluteX="176dp"
        tools:layout_editor_absoluteY="127dp"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/my_profile"
        android:textColor="#000000"
        android:textSize="20sp"
        tools:layout_editor_absoluteX="160dp"
        tools:layout_editor_absoluteY="207dp"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/location"
        android:textColor="#000000"
        android:textSize="20sp"
        tools:layout_editor_absoluteX="166dp"
        tools:layout_editor_absoluteY="494dp"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/payment"
        android:textColor="#000000"
        android:textSize="20sp"
        tools:layout_editor_absoluteX="166dp"
        tools:layout_editor_absoluteY="286dp"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/account"
        android:textColor="#000000"
        android:textSize="20sp"
        tools:layout_editor_absoluteX="170dp"
        tools:layout_editor_absoluteY="352dp"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/setting"
        android:textColor="#000000"
        android:textSize="20sp"
        tools:layout_editor_absoluteX="174dp"
        tools:layout_editor_absoluteY="424dp"
        tools:ignore="MissingConstraints" />
</androidx.constraintlayout.widget.ConstraintLayout>