<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MyProfile"
    android:background="@drawable/myprofile">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="227dp"
        android:layout_height="225dp"
        app:srcCompat="@drawable/qrcode"
        tools:layout_editor_absoluteX="92dp"
        tools:layout_editor_absoluteY="420dp"
        android:contentDescription="@string/todo"
        tools:ignore="MissingConstraints" />

    <EditText
        android:id="@+id/editTextTextPersonName"
        android:layout_width="352dp"
        android:layout_height="48dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/full_name"
        android:textColor="#000000"
        tools:layout_editor_absoluteX="30dp"
        tools:layout_editor_absoluteY="117dp"
        tools:ignore="LabelFor,MissingConstraints"
        android:autofillHints="" />

    <EditText
        android:id="@+id/editTextDate"
        android:layout_width="349dp"
        android:layout_height="50dp"
        android:ems="10"
        android:inputType="date"
        android:text="@string/expair_date"
        android:textColor="#000000"
        tools:layout_editor_absoluteX="31dp"
        tools:layout_editor_absoluteY="268dp"
        tools:ignore="LabelFor,MissingConstraints"
        android:autofillHints="" />

    <EditText
        android:id="@+id/editTextDate2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:autofillHints=""
        android:ems="10"
        android:inputType="date"
        android:minHeight="48dp"
        android:text="@string/dob"
        android:textColor="#000000"
        tools:ignore="LabelFor,MissingConstraints"
        tools:layout_editor_absoluteX="172dp"
        tools:layout_editor_absoluteY="199dp" />

    <EditText
        android:id="@+id/editTextNumber"
        android:layout_width="141dp"
        android:layout_height="48dp"
        android:autofillHints=""
        android:ems="10"
        android:inputType="number"
        android:text="@string/age"
        android:textColor="#000000"
        tools:ignore="LabelFor,MissingConstraints"
        tools:layout_editor_absoluteX="31dp"
        tools:layout_editor_absoluteY="199dp" />

    <EditText
        android:id="@+id/editTextTextPersonName4"
        android:layout_width="341dp"
        android:layout_height="48dp"
        android:autofillHints=""
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/destination"
        android:textColor="#000000"
        tools:ignore="LabelFor,MissingConstraints"
        tools:layout_editor_absoluteX="31dp"
        tools:layout_editor_absoluteY="344dp" />

</androidx.constraintlayout.widget.ConstraintLayout>